add comments to demo example

--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<div>	
+		<!-- it only works for text-area -->
 		<voice-capture lang="pt-BR" continuous="true" interimResults="true"></voice-capture>
 	</div>
 
