add gitignore and fix paths on demo.html

--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
 		<voice-capture lang="pt-BR" continuous="true" interimResults="true"></voice-capture>
 	</div>
 
-	<script src="angular.min.js"></script>
+	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="directive/speech-recognition.js"></script>
 	<script>
 		var app = angular.module("SpeechRecnogitionApp", 
