--- a/demo.html
+++ b/demo.html
@@ -2,20 +2,42 @@
 <html lang="en" ng-app='demoApp'>
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<title>Speech recognition</title>
 </head>
 <body>
-	<am-speech-recognition-form>
-		<fieldset>
-			<label for="name">Name</label>
-			<input type="text" name="name">
-		</fieldset>
-		<fieldset>
-			<label for="name">description</label>
-			<input type="text" name="description">
-		</fieldset>
-		<button type="submit">Submit</button>
-	</am-speech-recognition-form>		
+	<div class="container">
+		<div class="row">
+
+			<!-- calling the directive -->
+			<am-speech-recognition-form>
+				<div class="row">
+					<div class="col-sm-12">
+						<h2>Please, fill the form</h2>
+						<div class="form-group">
+							<label for="exampleInputEmail1">Email address</label>
+							<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+						</div>
+						<div class="form-group">
+							<label for="exampleInputPassword1">Password</label>
+							<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+						</div>
+						<div class="form-group">
+							<label for="exampleInputPassword1">Address</label>
+							<input type="text" class="form-control" id="exampleInputPassword1" placeholder="address">
+						</div>
+						<div class="form-group">
+							<label for="exampleInputPassword1">Additional info</label>
+							<input type="text" class="form-control" id="exampleInputPassword1" placeholder="Additional info">
+						</div>
+						<button type="submit" class="btn btn-info">Submit</button>
+					</div>
+				</div>
+			</am-speech-recognition-form>
+			<!-- end -->
+
+		</div>
+	</div>		
 
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="directives/speech-recognition-form.js"></script>
